# spcdas

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  spcdas.cpp
src/: spcdas.cpp  spcdas.sln  spcdas.vcxproj  spcdas.vcxproj.filters
